Added project_root to the credentials
Now you can specify the root in the credentials, or you
can specify an environment variable you'd like to use.
Later shopifydev will just predict what to use, but for
now since I don't know the right ENV variable to use
in VIM... we'll do it this way!

Also, documented that.

--- a/.shopifydev.yaml.sample
+++ b/.shopifydev.yaml.sample
@@ -3,3 +3,5 @@
 api_key: youneedakey
 password: andapassword
 url: my_store_url.myshopify.com/
+project_root: relative/path
+project_root_variable: SOME_ENVIRONMENT_VARIABLE
